@@ -29,5 +29,5 @@ DIST VMware-player-2.0.5-109488.x86_64.tar.gz 33383867 RMD160 de53fd58eb3fbe6b86
 DIST vmware-any-any-update115.tar.gz 493641 RMD160 56cabe56f70c01a22a7671e861cc5a2df19855c7 SHA1 ff9b6fdf6ca74495eb5f4822a1854fc91185377c SHA256 b1c14fa9514663b85c2efe8331407e71cce96e5a21a8b941fa570c960bbdcaa1
 EBUILD vmware-player-1.0.8.108000.ebuild 2663 RMD160 39bfd7ce0f8ee029b019c8531f33b0a04892dfcb SHA1 3fd1e46771a563525719893ef94d5fe04e9ae6ad SHA256 8c1bfcec59da440a07cc2bbc6cb5dfd4f081e3c12478d0553200eb62d826f501
 EBUILD vmware-player-2.0.5.109488.ebuild 2914 RMD160 7fdac2fc8c701cd3d283f326ea72daca733879c1 SHA1 e04c641535c436502a6ea905b9c83dc5ca5036a7 SHA256 654febc1dc5c75101aff2c5dee93aa7a9db45eaabdfab50a1a8b9351d6b8864e
-EBUILD vmware-player-2.5.0.118166.ebuild 4071 RMD160 d2349b1a708004644863179aa33268799f04b97e SHA1 d735e481439d1e128d98f78c3c76fde4f6ebf2c6 SHA256 c51ff874491b250087c6ea34f05c1564ccddcaed24d0666ff22229d6da60bf3c
+EBUILD vmware-player-2.5.0.118166.ebuild 4075 RMD160 d1c3c547f37af353dcd597d45045a46644a2593a SHA1 21f6b8d77ff571b33c1e3e508b4528e672c78645 SHA256 7363142566547aa75d045529f6eff81e3ca133378cceb4f0ebe0074b87eb4979
 MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
