@@ -21,7 +21,7 @@ LICENSE="vmware"
 SLOT="0"
 KEYWORDS="-x86 -amd64"
 IUSE=""
-RESTRICT="strip fetch"
+RESTRICT="strip binchecks"
 
 # vmware-workstation should not use virtual/libc as this is a
 # precompiled binary package thats linked to glibc.
