@@ -33,4 +33,4 @@ DIST VMware-workstation-6.0.5-109488.x86_64.tar.gz 195545057 RMD160 675002bc71a0
 DIST vmware-any-any-update115.tar.gz 493641 RMD160 56cabe56f70c01a22a7671e861cc5a2df19855c7 SHA1 ff9b6fdf6ca74495eb5f4822a1854fc91185377c SHA256 b1c14fa9514663b85c2efe8331407e71cce96e5a21a8b941fa570c960bbdcaa1
 EBUILD vmware-workstation-5.5.8.108000.ebuild 3247 RMD160 a619054c3c4318362f30e6ca10047b54c0dd6f6a SHA1 053e1cfd70208934063fbaab49581f7907381b5f SHA256 6470238fc76ab279dfb01ee2b13a4d32ff29d4f96aa9c5d094a09a786de4a214
 EBUILD vmware-workstation-6.0.5.109488.ebuild 4046 RMD160 753a39d6995ccfea738b3ab4d798466c87000e27 SHA1 9a3d651715627164ba22455f80a2f2a26c42d0ba SHA256 028b33395b0ade52f5814c863d7b7e45dd7738cc2b84763512b33abe6eac82c5
-EBUILD vmware-workstation-6.5.0.118166.ebuild 4081 RMD160 26cf5ceb42e5aa2411e5225c7939957d61b05b4a SHA1 4795aeb891480f837b8fff3383b4e985951824b1 SHA256 0aa5f09502ac1767475794b53999415c324cc4c0a0ae2caa67e5734dde1f7790
+EBUILD vmware-workstation-6.5.0.118166.ebuild 4508 RMD160 e836b2e50493f144e6a9e0400c4c4f16c423f8b0 SHA1 9506ed088cc9549dc6a99729fc75c9ce1e327120 SHA256 e834376194f64a26ad179103d01fda1d5e3dd24954b9a81b51e622f78efccc56
