@@ -21,7 +21,7 @@ LICENSE="vmware"
 SLOT="0"
 KEYWORDS="-x86 -amd64"
 IUSE=""
-RESTRICT="strip fetch"
+RESTRICT="strip fetch binchecks"
 
 # vmware-workstation should not use virtual/libc as this is a
 # precompiled binary package thats linked to glibc.
@@ -107,6 +107,15 @@ src_install() {
 
 	# Redirect all the ${D} paths to / paths"
 	sed -i -e "s:${D}::" ${WORKDIR}/vmware-confdir/bootstrap
+	
+	# Fix up icons/mime/desktop handlers
+	dodir /usr/share/
+	mv ${D}${VM_INSTALL_DIR}/share/applications ${D}/usr/share/
+	rm -f ${D}${VM_INSTALL_DIR}/share/icons/hicolor/{icon-theme.cache,index.theme}
+	mv ${D}${VM_INSTALL_DIR}/share/icons ${D}/usr/share/
+	dodir /usr/share/mime
+	mv ${D}${VM_INSTALL_DIR}/share/mime/{packages,application} ${D}/usr/share/mime
+	sed -i -e "s:${D}::" ${D}/usr/share/applications/*.desktop
 
 	# Copy across the temporary /etc/vmware directory
 	dodir /etc/vmware/init.d
